fixed spacing issue
- shape.js: object spacing
- script.js: object default location update
- css: arrow unicode update
- social share img update

--- a/risd-bfa2020/css.css
+++ b/risd-bfa2020/css.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     transition: all .6s;
     -webkit-font-smoothing: antialiased;
+    overflow: hidden;
 }
 
 @font-face {
@@ -80,6 +81,7 @@ header h1 {
 header h1 a {
     text-decoration: none;
     opacity:1;
+    transition: opacity .6s;
 }
 
 header h1:hover {
@@ -88,34 +90,24 @@ header h1:hover {
 
 header h1:nth-child(2) {
     text-align: right;
-    right:2%;
+    right: 1%;
 }
 
 header h1:nth-child(2)::after {
-    content: '\25B4'; 
+    content: '\25B6'; 
     display: inline-block;
-    font-size: 5rem;
+    transform:scale(.6);
+    transform-origin: center center;
     line-height: 0;
-    margin-right: -3rem;
-    padding-left: 1.5rem;
-    margin-right: -1.5rem;
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
 }
 
 header.active h1:nth-child(2)::after {
     font-size: inherit;
-    padding-left:0;
-    padding-bottom: 2rem;
-    margin-right: 0;
-    -webkit-transform: rotate(30deg) scale(1.3) translateY(-4px);
-    -moz-transform: rotate(30deg) scale(1.3) translateY(-4px);
-    -o-transform: rotate(30deg) scale(1.3) translateY(-4px);
-    -ms-transform: rotate(30deg) scale(1.3) translateY(-4px);
-    transform: rotate(30deg) scale(1.3) translateY(-4px);
+    -webkit-transform: rotate(180deg) scale(0.7);
+    -moz-transform: rotate(180deg) scale(0.7);
+    -o-transform: rotate(180deg) scale(0.7);
+    -ms-transform: rotate(180deg) scale(0.7);
+    transform: rotate(180deg) scale(0.7);
 }
 
 header.active {
@@ -243,19 +235,17 @@ h3 a:hover {
     Media quries
 --------------------------------------------------------------*/
 
+@media only screen and (min-width: 1680px) {
+    header h1:nth-child(2)::after{
+        padding-left: .5rem;
+        margin-left: 0.4rem;
+    }
+}
 
 @media only screen and (max-width: 1080px) {
 
     h1 {
         font-size:2.5rem;
-    }
-
-    header h1:nth-child(2)::after{
-        font-size: 4rem;
-        padding-left: 1rem;
-    }
-    header.active h1:nth-child(2)::after{
-        padding-bottom: 1rem;
     }
     
 }
@@ -263,12 +253,6 @@ h3 a:hover {
 @media only screen and (max-width: 800px) {
     h1 {
         font-size: 1.5rem;
-    }
-    header h1:nth-child(2)::after{
-        font-size: 3rem;
-    }
-    header.active h1:nth-child(2)::after{
-        padding-bottom: .5rem;   
     }
 }
 
